correção(exercicio clubes) correção dos exercicos da aula 02

--- a/src/modulo-03-web/dia-01/exemplo.html
+++ b/src/modulo-03-web/dia-01/exemplo.html
@@ -7,6 +7,7 @@
 	
 	<body>
 		<script src="lista-js-basico.js"></script>
+		<script src="../dia-02/exercicio-football.js"></script>
 	</body>
 </html>
 	
