feat(exercicio 3) inicio aos exercicios

--- a/src/modulo-03-web/dia-01/exemplo.html
+++ b/src/modulo-03-web/dia-01/exemplo.html
@@ -8,6 +8,8 @@
 	<body>
 		<script src="lista-js-basico.js"></script>
 		<script src="../dia-02/exercicio-football.js"></script>
+		<script src="../dia-03/classes-javascript.js"></script>
 	</body>
 </html>
+	
 	
