commit fim de aula

--- a/src/modulo-03-web/dia-03/index.html
+++ b/src/modulo-03-web/dia-03/index.html
@@ -5,9 +5,8 @@
    <meta charset="UTF-8">
   </head>
   <body>
-    <h3>Lista de exercícios de Arrays</h3>
-    <script type="text/javascript" src="http://momentjs.com/downloads/moment.min.js"></script>
-    <script type="text/javascript" src="lista-array-clubes.js"></script>
-    <script type="text/javascript" src="Elfo.js"></script>
+    <h3>Lista de exercícios de Arrays</h3>    
+    <script type="text/javascript" src="carrinho.js"></script>
+	<script type="text/javascript" src="carrinhoChantagista.js"></script>		
   </body>
 </html> 
